# cifar10-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  layerWiseDump.ipynb  layer_outputs.txt  main.ipynb
Operators/include/: conv2d.h  dense.h  flatten.h  maxpooling.h  relu.h  softmax.h
Operators/src/: conv2d.cpp  cov2d.cpp  dense.cpp  flatten.cpp  maxpooling.cpp  relu.cpp  softmax.cpp
Output/cpp/: conv2d_1_output.txt  conv2d_2_output.txt  conv2d_output.txt  dense_1_output.txt  dense_output.txt  max_pooling2d_1_output.txt  max_pooling2d_output.txt
Output/python/: conv2d_1_output.txt  conv2d_2_output.txt  conv2d_output.txt  dense_1_output.txt  dense_output.txt  max_pooling2d_1_output.txt  max_pooling2d_output.txt
Test_Operators/include/: modeltest.h  unittest.h
Test_Operators/src/: conv2d_test.cpp  dense_test.cpp  flatten_test.cpp  maxpooling_test.cpp  modeltest.cpp  unittest.cpp
configs/json/: model_config.json
data/: conv2d_output_with_relu.txt
data/reference/: conv2d_1_attributes.json  conv2d_2_attributes.json  conv2d_attributes.json  dense_1_attributes.json  dense_attributes.json  flatten_attributes.json  max_pooling2d_1_attributes.json  max_pooling2d_attributes.json
data/reference/sequential/conv2d/: BiasAdd__6_attributes.json
src/: main.cpp
utilities/include/: WeightLoader.h  labels.h  loadbinfile.h  loadjsonfile.h  readimage.h  saveastxt.h
utilities/src/: WeightLoader.cpp  labels.cpp  loadbinfile.cpp  loadjsonfile.cpp  readimage.cpp  saveastxt.cpp
